# findstar

./: .cproject  .project  NEWS  README  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
release/: Makefile  config.status
release/src/: Makefile
src/: ACatTycho2.cpp  ACatTycho2.h  ACatUCAC4.cpp  ACatUCAC4.h  ACatalog.cpp  ACatalog.h  ADefine.h  AMath.cpp  ATimeSpace.cpp  ATimeSpace.h  Makefile.am  Makefile.in  findstar.cpp
